k8s/krakend.yaml
# 2. Cài đặt Pod KrakenD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: krakend
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: devopsfaith/krakend:2.6.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: krakend-config-vol
          mountPath: /etc/krakend/
      volumes:
      - name: krakend-config-vol
        configMap:
          name: krakend-config
---
# 3. Mở cổng nội bộ cho KrakenD
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
spec:
  selector:
    app: krakend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
