k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: production.byn.id.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: krakend-service
            port:
              number: 80
